# desafio-ml

./: README.md  main_forecasting_mod.py  main_zero_tags_solid.py  pyproject.toml
data/: sales.csv
notebooks/: forecasting_eda.ipynb  tuning.ipynb
presentacion/: Resultados del Desafío Técnico de Mercado Libre_Jordan Urias.pptx
results/: forecasting_results.csv  tag_class_zero_shoot_results.csv
src/models/: base_model.py  base_tag_classifier_model.py  factory.py  prophet_model.py  ridge_model.py  sarima_model.py  xgb_model.py  zeroshoot_classifier.py
src/pipeline/: evaluator.py  trainer.py
src/preprocessing/: feature_extractor.py  feature_generator.py  text_cleaner.py
src/test/: forecasting.py
src/utils/: forecasting_pipeline_mod.py  results_saver.py  visualization.py
src/utils/interfaces/forecasting_pipeline/: data_loader_interface.py  model_trainer_interface.py  visualization_interface.py
src/utils/interfaces/tagging/: results_saver_interface.py  visualization_interface.py
src/utils/modules/: data_loader.py  model_trainer.py
