[tool.poetry]
name = "desafio-ml"
version = "0.1.0"
description = "Prueba tecnica para mercado libre."
authors = ["jjups96 <jjups96@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
scikit-learn = ">=1.6.1,<2.0.0"
xgboost = ">=2.1.4,<3.0.0"
lightgbm = ">=4.5.0,<5.0.0"
joblib = ">=1.4.2,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
streamlit = ">=1.42.0,<2.0.0"
transformers = ">=4.48.3,<5.0.0"
prefect = ">=3.2.1,<4.0.0"
statsmodels = "^0.14.4"
prophet = "^1.1.6"
cmdstanpy = "^1.2.5"
numpy = "1.23.5"
pandas = "<2.0.0"
pmdarima = "^2.0.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
torch = "^2.6.0"
datasets = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"